# delete_migration

./: .gitignore  LICENSE.txt  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
main/: admin.py  authentication.py  models.py  resources.py  serializers.py  signals.py  urls.py  views.py
main/helpers/: func.py
playday/: asgi.py  settings.py  urls.py  wsgi.py
src/delete_migration_roosevelt/: __init__.py  management.py
