[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "delete_migration"
version = "1.0.0"
authors = [
  { name="Abandy Roosevelt", email="rooseveltabandy@gmail.com" },
]
description = "This is a command-line app that deletes a single folder migrations or all directory migrations folder"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RooseveltTech/delete_migration"
"Bug Tracker" = "https://github.com/RooseveltTech/delete_migration/issues"