[metadata]
name = delete-migration
version = 1.0.0
author = Abandy Roosevelt
author_email = rooseveltabandy@gmail.com
description = This is a command-line app that deletes a single folder migrations or all directory migrations folder
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/RooseveltTech/delete_migration
project_urls =
    Bug Tracker = https://github.com/RooseveltTech/delete_migration/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src